# DAMASK

./: .clang-tidy  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .mailmap  .prospector.yaml  .yamllint.yaml  CITATION.cff  CMakeLists.txt  CONFIG  DAMASK.psd  DAMASK_env.bat  DAMASK_env.csh  DAMASK_env.lnk  DAMASK_env.sh  DAMASK_env.zsh  DAMASK_prerequisites.sh  DAMASK_prerequisits.sh  Dockerfile  IO.f90  LICENSE  Makefile  README  README.md  VERSION  build_FEM.sh  build_spectral.sh  codemeta.json  configure  constitutive.f90  copyright header.txt  damask_env.bat  damask_env.sh  math.f90  mesh.f90  paper.bib  paper.md  prec.f90  (+2 more)
code/: .gitattributes  .gitignore  CMakeLists.txt  CPFEM.f90  CPFEM2.f90  C_helper.c  C_routines.c  CommercialFEM_fileList.f90  DAMASK.pyf  DAMASK2Python_helper.f90  DAMASK_abaqus_exp.f  DAMASK_abaqus_std.f  DAMASK_marc.f90  DAMASK_marc2010.f90  DAMASK_marc2011.f90  DAMASK_marc2012.f90  DAMASK_python.f90  DAMASK_python_interface.f90  DAMASK_quit.f90  DAMASK_run.py  DAMASK_spectral.f90  DAMASK_spectralDriver.f90  DAMASK_spectralSolver.f90  DAMASK_spectralSolver_Basic.f90  DAMASK_spectral_AL.f90  DAMASK_spectral_Driver.f90  DAMASK_spectral_SolverAL.f90  DAMASK_spectral_SolverBasic.f90  DAMASK_spectral_SolverBasicPETSC.f90  DAMASK_spectral_Utilities.f90  DAMASK_spectral_driver.f90  DAMASK_spectral_interface.f90  DAMASK_spectral_single.f90  DAMASK_spectral_solverAL.f90  DAMASK_spectral_solverBasic.f90  DAMASK_spectral_solverBasicPETSc.f90  DAMASK_spectral_solverPolarisation.f90  DAMASK_spectral_utilities.f90  FEsolving.f90  IO.f90  (+125 more)
code/config/: Crystallite_All.config  Crystallite_None.config  Homogenization_Damage_NonLocal.config  Homogenization_HydrogenFlux_CahnHilliard.config  Homogenization_Isostrain_Parallel3.config  Homogenization_Isostrain_SX.config  Homogenization_Isostrain_Taylor2.config  Homogenization_Porosity_PhaseField.config  Homogenization_Thermal_Conduction.config  Homogenization_VacancyFlux_CahnHilliard.config  Kinematics_Thermal_Expansion.config  Microstructure_DP_Steel.config  Phase_Damage.config  Phase_DisloKMC_Tungsten.config  Phase_DisloUCLA_Tungsten.config  Phase_Dislokmc_Tungsten.config  Phase_Dislotwin_TWIP-Steel-FeMnC.config  Phase_Dislotwin_TWIP_Steel_FeMnC.config  Phase_Dislotwin_Tungsten.config  Phase_J2_Aluminum_Isotropic.config  Phase_None_Orthorombic.config  Phase_Nonlocal_Aluminum.config  Phase_Phenopowerlaw_Aluminum.config  Phase_Phenopowerlaw_BCC-Ferrite.config  Phase_Phenopowerlaw_BCC-Martensite.config  Phase_Phenopowerlaw_Gold.config  Phase_Phenopowerlaw_Magnesium.config  Phase_Phenopowerlaw_cpTi-alpha.config  Phase_Phenopowerlaw_multiField.config  Phase_Thermal.config  Source_Damage_IsoBrittle.config  Source_Vacancy_Irradiation.config  Texture_Gauss_001.config  Texture_Gauss_101.config  Texture_Gauss_123.config  Texture_RandomSingleCrystals.config  Texture_Rolling.config  abaqus_v6.env  debug.config  example.linearODF  (+3 more)
code/damage/: CMakeLists.txt  damage_local.f90
code/homogenization/: CMakeLists.txt  homogenization_none.f90
code/hydrogenflux/: CMakeLists.txt
code/include/: concom2010  concom2011  creeps2007r1  creeps2008r1
code/kinematics/: CMakeLists.txt  kinematics_cleavage_opening.f90  kinematics_thermal_expansion.f90
code/plastic/: CMakeLists.txt  plastic_phenoplus.f90
code/porosity/: CMakeLists.txt
code/setup/: compile_SpectralSolver.py  compile_SpectralSovers.py  modify_Files.py  setup_Makefile.py  setup_code.py  setup_code.sh  symlink_Code.py
code/source/: CMakeLists.txt  source_vacancy_irradiation.f90  source_vacancy_phenoplasticity.f90
code/spectral/: CMakeLists.txt
code/thermal/: CMakeLists.txt  thermal_isothermal.f90
code/vacancyflux/: CMakeLists.txt
python/: .coveragerc  .gitignore  MANIFEST.in  README  makeDistribution.sh  mypy.ini  pyproject.toml  setup.cfg  setup.py
python/damask/: Lambert.py  VERSION  _Lambert.py  __init__.py  _asciitable.py  _colormap.py  _colormaps.py  _config.py  _configmaterial.py  _crystal.py  _environment.py  _geom.py  _geomgrid.py  _grid.py  _lattice.py  _lattice_family.py  _loadcasegrid.py  _loadcasemesh.py  _material.py  _orientation.py  _result.py  _rotation.py  _table.py  _test.py  _typehints.py  _vtk.py  _yaml.py  asciitable.py  colormaps.py  dadf5.py  environment.py  geom.py  grid_filters.py  ktv.py  lattice.py  mechanics.py  orientation.py  oritest.py  quaternion.py  result.py  (+7 more)
python/tests/: conftest.py  rotation_conversion.py  test_Colormap.py  test_Config.py  test_ConfigMaterial.py  test_Crystal.py  test_DADF5.py  test_Geom.py  test_GeomGrid.py  test_Grid.py  test_Lattice.py  test_LoadcaseGrid.py  test_LoadcaseMesh.py  test_Material.py  test_MaterialConfig.py  test_Orientation.py  test_Result.py  test_Rotation.py  test_Table.py  test_VTK.py  test_YAML.py  test_curl.py  test_div.py  test_grad.py  test_grid_filters.py  test_lattice.py  test_mechanics.py  test_ori_vec.py  test_seeds.py  test_tensor.py  test_util.py
src/: .gitignore  CLI.cpp  CLI.f90  CLI.h  CMakeLists.txt  CPFEM.f90  CPFEM2.f90  CPP_routines.cpp  C_interfacing.f90  C_routines.c  DAMASK_FEM.f90  DAMASK_Marc.f90  DAMASK_abaqus.f  DAMASK_abaqus_exp.f  DAMASK_abaqus_std.f  DAMASK_grid.f90  DAMASK_interface.f90  DAMASK_marc.f90  DAMASK_marc2019.1.f90  DAMASK_spectral.f90  FEM_interface.f90  FEM_mech.f90  FEM_mesh.f90  FEM_utilities.f90  FEM_zoo.f90  FEsolving.f90  HDF5_utilities.f90  IO.f90  IO.h  LAPACK_interface.f90  Lambert.f90  Makefile  OS.f90  VTI.f90  VTK.f90  YAML.f90  YAML_parse.f90  YAML_types.f90  base64.f90  commercialFEM_fileList.f90  (+181 more)
src/Marc/: DAMASK_Marc.f90  IO_Marc.f90  discretization_Marc.f90  element.f90  materialpoint_Marc.f90
src/MarcInclude/: concom2018.1  concom2019  creeps2018
src/grid/: DAMASK_grid.f90  FFTW.f90  VTI.cpp  VTI.f90  VTI.h  base64.f90  discretization_grid.f90  grid_chemical_FDM.f90  grid_damage_spectral.f90  grid_mech_FEM.f90  grid_mech_spectral_Galerkin.f90  grid_mech_spectral_basic.f90  grid_mech_spectral_polarisation.f90  grid_mech_spectral_polarization.f90  grid_mech_spectral_variation.f90  grid_mech_utilities.f90  (+5 more)
(+1988 files in other folders)
