[project]
name = 'damask'
description = 'Pre- and post-processing tools for DAMASK'
keywords = ['crystal plasticity', 'materials science', 'materials engineering']

authors = [
    {name = 'The DAMASK Team', email = 'support@damask-multiphysics.org'}
]

classifiers = [
    'Intended Audience :: Science/Research',
    'Intended Audience :: Manufacturing',
    'Intended Audience :: Education',
    'Topic :: Scientific/Engineering',
    'Development Status :: 5 - Production/Stable',
    'License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3 :: Only',
    'Typing :: Typed',
]

requires-python = '>=3.10'
dependencies = [
    'pandas>=1.3',
    'numpy>=1.21',
    'scipy>=1.8',
    'h5py>=3.6',
    'vtk>=9.1',
    'matplotlib>=3.5',
    'pyyaml>=5.4',
]

readme = 'README.md'
dynamic = ['version']

[project.urls]
homepage = 'https://damask-multiphysics.org'
documentation = 'https://damask-multiphysics.org/documentation'
download = 'https://damask-multiphysics.org/download'
repository = 'https://github.com/damask-multiphysics/DAMASK'


[build-system]
requires = ['setuptools >= 59.0']
build-backend = 'setuptools.build_meta'

[tool.setuptools.dynamic]
version = {file = ['damask/VERSION']}

[tool.pytest.ini_options]
doctest_optionflags = 'NUMBER NORMALIZE_WHITESPACE ELLIPSIS'

[tool.numpydoc_validation]
checks = [
    'all',   # report on all checks, except the below
    'EX01',
    'SA01',
    'ES01',
    'RT02',  # because shape information (for np.ndarray) besides type
]

exclude = [  # don't report on objects that match any of these regex
    '\.undocumented_method$',
    '\.__repr__$',
]

[tool.ruff.lint]
ignore = ['E701','E741']
