[metadata]
name = damask
version = file: damask/VERSION
author = The DAMASK team
author_email = damask@mpie.de
url = https://damask.mpie.de
description = DAMASK processing tools
long_description = Pre- and post-processing tools for DAMASK
license = AGPL3
classifiers =
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = true
python_requires = >= 3.8
install_requires =
    pandas>=0.24                                                                                    # requires numpy
    numpy>=1.17                                                                                     # needed for default_rng
    scipy>=1.2
    h5py>=2.9                                                                                       # requires numpy
    vtk>=8.1
    matplotlib>=3.0                                                                                 # requires numpy, pillow
    pyyaml>=3.12
